--- a/models/graph/tdn_full/dfg_config.yaml
+++ b/models/graph/tdn_full/dfg_config.yaml
@@ -8,8 +8,8 @@ image_ext: tif
 
 # IMAGE DIR BY EXT
 image_dirs: 
-  tif: /home/brook/data/planet/train-tif
-  jpg: /home/brook/data/planet/train-jpg
+  tif: /data/planet/train-tif
+  jpg: /data/planet/train-jpg
 
 # BACKUP IMAGE DIR
 image_dir: images/other
@@ -35,4 +35,4 @@ tags:
     - blow_down
 
 # BATCH SIZE
-batch_size: 64
+batch_size: 16
